# Engine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Docs/: README.md
Engine/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Engine.cpp  Engine.h  EntryPoint.h
Engine/Application/: Application.cpp  Application.h  CMakeLists.txt  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  Window.h  WindowsInput.cpp
Engine/Application/Windows_Window/: WindowsWindow.h
Engine/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timer.cpp  Window.h
Engine/Core/Events/: CMakeLists.txt  Event.h  MouseEvent.h
Engine/Editor/: CMakeLists.txt  main.cpp
Engine/Editor/Assert/Shader/: compute_ssao_fragment.glsl  fragment_basicpbr.glsl  fragment_hdrtocubemap.glsl  fragment_skybox.glsl  gbuffer_fragment.glsl  gbuffer_vertex.glsl  octree_vertex.glsl  pawn_vertex.glsl  screen_quad_vertex.glsl  skeleton_fragment.glsl  skeleton_vertex.glsl  triangle_vertex.glsl  vertex_basicpbr.glsl
Engine/Editor/Assets/Shader/: fragment.glsl  fragment_basicpbr.glsl  fragment_prefilter.glsl  fragment_skybox.glsl  gbuffer_vertex.glsl  octree_vertex.glsl  trajectory_fragment.glsl  triangle_fragment.glsl  vertex_skybox.glsl
Engine/Entity/: Animation.cpp  Animation.h  CMakeLists.txt  Components.h  Entity.cpp  Entity.h  Model.cpp  Model.h  Scene.cpp  Scene.h
Engine/Events/: ApplicationEvent.h  CMakeLists.txt  Event.cpp  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Engine/Gui/: CMakeLists.txt  DockSpaceLayer.cpp  DockSpaceLayer.h  GuiCommand.cpp  GuiCommand.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLog.h
Engine/Gui/ImNodes/: CMakeLists.txt  ImGuiNodes.cpp  ImGuiNodes.h  ImNodesEz.cpp
Engine/Layer/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  imgui.ini
Engine/Log/: CMakeLists.txt  Log.h
Engine/Platform/: CMakeLists.txt  Platform.cpp  Platform.h
Engine/Platform/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/Platform/OpenGL/OpenGL_Imgui/: CMakeLists.txt
Engine/Platform/OpenGL/Stb/: CMakeLists.txt
Engine/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Engine/Render/: CMakeLists.txt  GraphicsContext.cpp  GraphicsContext.h  Shader.cpp  Shader.h
Engine/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Renderer/OpenGL_Renderer/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.cpp
Engine/Runtime/: CMakeLists.txt  Engine.cpp  Engine.h
Engine/Runtime/Application/: Application.cpp  Application.h  CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  Window.cpp  Window.h  WindowsInput.cpp  WindowsInput.h
Engine/Runtime/Application/OpenGL_Imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
Engine/Runtime/Application/Windows_Window/: CMakeLists.txt  WindowsWindow.cpp  WindowsWindow.h
Engine/Runtime/Core/: CMakeLists.txt  Core.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Timer.h
Engine/Runtime/Core/Base/: PublicSingleton.h
Engine/Runtime/Core/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
Engine/Runtime/Core/Input/: Input.h
Engine/Runtime/Core/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
Engine/Runtime/Entity/: Animation.h  CMakeLists.txt  Components.h  Model.h  Scene.cpp
Engine/Runtime/GameFramework/: CMakeLists.txt  Model.cpp  Scene.cpp
Engine/Runtime/Gui/: CMakeLists.txt  DockSpaceLayer.cpp  DockSpaceLayer.h  GuiCommand.cpp  GuiCommand.h  ImGuiLog.cpp  ImGuiLog.h
Engine/Runtime/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/Runtime/Utils/: CMakeLists.txt  Octree.cpp  Octree.h  Spare.cpp  Spare.h  hilbert.c  hilbert.h
Engine/Utils/: CMakeLists.txt  Octree.h  Spare.h  test.cu
Engine/Window/: CMakeLists.txt  Input.h  Window.cpp  Window.h
Engine/Window/Windows/: CMakeLists.txt  WindowsWindow.cpp  WindowsWindow.h
Example/Game/: CMakeLists.txt  main.cpp
Example/Game/Assert/: fragment.glsl  fragment_animated.glsl  fragment_normal.glsl  fragment_uv.glsl  vertex_animated.glsl  vertex_normal.glsl
Example/Octree/: CMakeLists.txt  OctreeObject.cpp  OctreeObject.h  happly.h  main.cpp  ply_io.cpp  ply_io.h
Example/Octree/Assert/: box_fragment.glsl  box_vertex.glsl  fragment.glsl  octree_fragment.glsl  octree_vertex.glsl
Example/Octree/Assets/: vertex.glsl
Example/Octree/Octree/: CMakeLists.txt  Octree.cpp  Octree.h
Example/PointCloudViewer/: CMakeLists.txt  main.cpp
Example/Voxelcraft/: CMakeLists.txt  main.cpp
Game/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  CoreTest.cpp  MathTest.cpp
engine/: Application.cpp  Application.h  CMakeLists.txt  Core.h  Log.cpp  Log.h  Window.cpp  Window.h  engine.cpp  engine.h
engine/Events/: Event.h  KeyEvent.h  MouseCodes.h
engine/Log/: CMakeLists.txt
engine/Platform/: CMakeLists.txt
engine/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
engine/Window/: CMakeLists.txt  Window.cpp
engine1/: CMakeLists.txt  EntryPoint.h  Log.h
engine1/Events/: ApplicationEvent.h
engine1/Log/: Log.cpp
(+101 files in other folders)
