set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/Test)

# add_executable(CoreTest CoreTest.cpp)
# target_link_libraries(CoreTest PRIVATE GTest::gtest Engine)
# add_test(NAME CoreTest COMMAND CoreTest WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})

# add_executable(MathTest MathTest.cpp)
# target_link_libraries(MathTest PRIVATE GTest::gtest Engine)
# add_test(NAME MathTest COMMAND MathTest WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})